# stmeasures

./: ECATEPEC.json  Makefile  README.md  Test.py  pyproject.toml
.github/workflows/: beta-publish.yml  build-deploy-beta.yml  build-deploy.yml  build.yml
docs/source/: api.rst  calculates.rst  classes.rst  conf.py  index.rst  modules.rst  read.rst  visualize.rst
src/: amss.c  amss.h  coordinates.h  dtw.c  dtw.h  edit_distance.c  edit_distance.h  euclidean.c  euclidean.h  frechet.c  frechet.h  hausdorff.c  hausdorff.h  lcss.c  lcss.h  manhattan.c  manhattan.h  math_utils.c  math_utils.h  rdp.c  test_frechet.py  test_hausdorff.py  trajectory.c  trayectory.h
stmeasures/: __init__.py  _algorithms.py  calculates.py  calculator.py  read.py  validation.py  visualize.py  vizualize.py
stmeasures-clib/: dtw.py
stmeasures/calculate/: amss.py  base.py  dtw.py  editdistance.py  euclidean.py  frechet.py  hausdorff.py  lcss.py  manhattan.py  rdp.py  sad.py  trayectory.py
stmeasures/objects/: TrajectoryHandler.py  abstractions.py  cstructures.py  geojson.py  read.py
tests/: coordinates.py  dtw.py  frechet.c  hausdorff.c  test_amss.py  test_editdist.py  test_euclidean.py  test_frechet.py  test_geojson.py  test_hausdorff.py  test_lcss.py  test_sad.py  test_validations.py
